# bulq

./: .cursorignore  .env  .env.development  .env.example  .env.production  .gitignore  Caddyfile  DEVELOPMENT_NOTES.md  LICENSE  MIGRATION_USERNAME.md  PRODUCTION_READY.md  PRODUCTION_SETUP.md  README.md  UNIFIED_CONFIG.md  UPSTREAM_PROXY_SETUP.md  database_schema.md  docker-compose.dev.yml  docker-compose.override.yml.example  docker-compose.yml  justfile
backend/: Dockerfile  ERROR_CODES.md  add_invite_token_migration.py  alembic_env_example.py  database.py  main.py  pyproject.toml  seed_data.py
backend/alembic/versions/: 1ea47a54e630_merge_language_and_comment_branches.py  2f9fd584c644_add_is_helper_to_run_participations.py  3bb59d018e5c_convert_quantity_fields_from_integer_to_.py  44a3f2e79d67_add_comment_field_to_runs_table.py  4c8d5e9a1b2f_add_app_settings_table.py  5d9e6f0b2c3g_add_dark_mode_to_users.py  6e0f7g1c3d4h_add_preferred_language_to_users.py  95ea765a02a6_add_comment_to_product_bids.py
backend/app/: auth.py  background_tasks.py  config.py  database.py  error_handlers.py  error_models.py  exceptions.py  logging_config.py  main.py  middleware.py  models.py  repository.py  request_context.py  run_state.py  transaction.py  validation.py  websocket_manager.py
backend/app/api/: middleware.py  websocket_manager.py
backend/app/core/: error_codes.py  exceptions.py  models.py  repository.py  run_state.py  success_codes.py
backend/app/errors/: handlers.py  models.py
backend/app/events/: __init__.py  domain_events.py  event_bus.py
backend/app/infrastructure/: auth.py  config.py  database.py  logging_config.py  request_context.py  runtime_settings.py  transaction.py
backend/app/repositories/: __init__.py  abstract.py  database.py  memory.py  user_repository.py
backend/app/routes/: admin.py  auth.py  distribution.py  groups.py  notifications.py  products.py  reassignment.py  runs.py  search.py  shopping.py  stores.py  websocket.py
backend/app/schemas/: __init__.py  admin_schemas.py  auth_schemas.py  common.py  distribution_schemas.py  group_schemas.py  notification_schemas.py  product_schemas.py  reassignment_schemas.py  run_schemas.py  search_schemas.py  shopping_schemas.py  store_schemas.py
backend/app/scripts/: reset_db.py  seed_data.py  seed_memory_data.py
backend/app/services/: __init__.py  admin_service.py  base_service.py  bid_service.py  distribution_service.py  group_service.py  notification_service.py  product_service.py  reassignment_service.py  run_notification_service.py  run_service.py  run_state_service.py  shopping_service.py  store_service.py
backend/app/utils/: background_tasks.py  validation.py
backend/migrations/: 002_remove_email_add_username.sql  README.md
backend/tests/: FINAL_STATUS.md  README.md  TESTS_SUMMARY.md  TEST_RESULTS.md  conftest.py  test_auth.py  test_event_bus.py  test_main.py  test_models.py  test_models_advanced.py  test_repository.py  test_routes.py  test_services.py  test_state_machine.py  test_websocket.py
docs/: backlog.md  (+9 more)
(+258 files in other folders)
